Prevent map distortion on browser window resize

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,11 +14,9 @@ body {
 }
 
 #world-map {
-  height: 100%;
   left: 0;
   position: absolute;
   top: 0;
-  width: 100%;
 }
 
 textrow {
